--- a/assets/style.css
+++ b/assets/style.css
@@ -13,19 +13,24 @@ html {
     font-family: "Fahkwang", sans-serif;
     background-color: #454545;
     color: #DDDBCB;
-    display: grid;
+  }
+
+  main.grid {
+    display:grid;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 20vh 60vh 20vh;
+    
   }
   
   img {
     max-width: 100%;
   }
   #headshot {
-    grid-column: 5 / span 8;
-    grid-row: 2;
+    grid-column: 2 / span 6;
+    grid-row: 1 /span 2;
     height: 400px;
     border-radius: 190px;
+    margin: 40px 0 0 120px;
   }
 
 
@@ -86,7 +91,7 @@ html {
             font-style: italic;
         }
         p {
-            font-size: 1.4rem;
+            font-size: 1.2rem;
             margin: 10px 10px;
         }
     }
@@ -138,4 +143,53 @@ footer.primary {
         padding-right: 10px;
     }
     i {font-size: 2rem;}
+}
+
+
+/* .color-block{
+    grid-column: 2 / span 6;
+    grid-row: 2;
+    background-color: #454545;
+    height: 320px;
+    align-self: end;
+    border-radius: 80px 200px 180px 200px;
+} */
+
+.about-me {
+    h1{
+        text-shadow: 1px 1px #DDDBCB;
+    }
+}
+
+dl.details {
+
+    dt{
+        font-size:1.6rem;
+    }
+    dd{
+        font-size: 1.2rem;
+        padding: 10px 0 10px 0;
+    }
+}
+
+.resume-section {
+    margin-left: 8vw;
+    margin-bottom: 40px;
+
+    h2{
+        color:#009FB7;
+        font-size:1.6rem;
+    }
+    h3{
+        font-size: 1.2rem;
+    }
+
+    a{
+        color:#DDDBCB;
+        text-decoration: none;
+    }
+
+}
+#skills h2{
+    margin-top: 40px;
 }
