--- a/assets/style.css
+++ b/assets/style.css
@@ -211,3 +211,19 @@ dl.details {
   ::-webkit-scrollbar-thumb:hover {
     background: #555; 
   }
+
+  @media screen and (max-width: 1280px) {
+    nav {
+        display: none;
+        background-color: #DDDBCB;
+    }
+
+    #content {
+        grid-column: 2 / span 9;
+    }
+    .bg-color-change {
+        grid-column: 1 / span 12;
+    }
+
+
+  }
