--- a/assets/style.css
+++ b/assets/style.css
@@ -25,13 +25,14 @@ html {
   
   img {
     max-width: 100%;
+    height: auto;
   }
   #headshot {
-    grid-column: 2 / span 6;
+    grid-column: 2 / span 2;
     grid-row: 1 /span 2;
-    height: 400px;
+    width: 360px;
     border-radius: 190px;
-    margin: 40px 0 0 120px;
+    margin: 40px 50px 0 120px;
   }
 
 
@@ -134,6 +135,15 @@ html {
 
 }
 
+.contact {
+    h2{
+        color:#009FB7;
+    }
+    h3{
+        margin: 5px 0 20px 20px;
+    }
+}
+
 
 footer.primary {
     grid-column: 2 / span 8;
@@ -163,6 +173,11 @@ footer.primary {
     h1{
         text-shadow: 1px 1px #DDDBCB;
     }
+    h3 {
+        font-size: 1.4rem;
+        font-weight: 400;
+        margin-left: 10px;
+    }
 }
 
 dl.details {
@@ -176,27 +191,21 @@ dl.details {
     }
 }
 
-.resume-section {
-    margin-left: 8vw;
-    margin-bottom: 40px;
-
-    h2{
-        color:#009FB7;
-        font-size:1.6rem;
-    }
-    h3{
-        font-size: 1.2rem;
-    }
-
+.resume-content {
     a{
-        color:#DDDBCB;
+        color:#454545;
         text-decoration: none;
     }
+    a:hover{
+        color:#009FB7;
+    }
+}
 
+
+h2.resume {
+margin: 20px 0 0 0;
 }
-#skills h2{
-    margin-top: 40px;
-}
+
 
 /* ----- Scroll Bar ----- */
 ::-webkit-scrollbar {
